# q

./: Cargo.toml  LICENSE  README.md
src/: config.rs  executor.rs  main.rs  models.rs
src/ai/: mod.rs  openrouter.rs
