[package]
name = "q-cli"
version = "0.1.0"
edition = "2021"
description = "q is a terminal helper that uses AI to interpret natural language queries and suggest (or execute) appropriate shell commands."
license = "MIT"
repository = "https://github.com/sauyon/q"
readme = "README.md"
keywords = ["cli", "shell", "terminal", "ai", "assistant"]
categories = ["command-line-utilities"]
authors = ["sauyon"]

[[bin]]
name = "q"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = [
	"json",
	"rustls-tls",
], default-features = false }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
colored = "2.1"
dialoguer = "0.11"
anyhow = "1.0"
toml = "0.8"
async-trait = "0.1"
regex = "1.12.2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
